tests/trybuild/registry/unexpected_token.stderr
error: no rules expected the token `+`
 --> tests/trybuild/registry/unexpected_token.rs:7:30
  |
7 | type Registry = Registry!(A, + B,);
  |                              ^ no rules expected this token in macro call
